# mpi

./: .gitignore  CMakeLists.txt  README.md  gl_includes.h  main.cpp
src/: Application.h  GridTexture.h  Solution.h  Solution2.h  Solution_3lab.h  main.cpp
src/core/: AirCore.h  AirUtils.h  ECS.cpp  ECS.h  Game.cpp  Game.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  ogl_common.h
src/renderer/: renderer.cpp  renderer.h
